--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       <div class="banner-content">
-        <h1 class="banner-title" >Brand New Group of Architects</h1>
+        <h1 class="banner-title">Brand New Group of Architects</h1>
         <p class="banner-desc">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
@@ -30,5 +30,28 @@
         <img src="./images/banner.png" alt="" />
       </div>
     </header>
+    <main>
+      <section class="our-features">
+        <div class="features-container display-flex">
+          <div class="feature-images">
+            <img src="./images/team1.png" alt="" />
+            <img src="./images/team2.png" alt="" />
+            <img src="./images/team3.png" alt="" />
+            <img src="./images/team4.png" alt="" />
+          </div>
+          <div class="feature-content display-flex">
+            <h2>
+              <span class="span-1">Quick list</span> of Our <span class="span-2">Features</span>
+            </h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even.
+            </p>
+            <button class="btn">Explore More</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
