--- a/index.html
+++ b/index.html
@@ -52,6 +52,74 @@
           </div>
         </div>
       </section>
+      <section class="feature-and-experience">
+        <div class="feature-experience-container display-flex">
+          <div class="feature-names">
+            <div class="feature-title">
+              <h2>Features you will love & enjoy</h2>
+            </div>
+            <div class="feature-desc">
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even.
+              </p>
+            </div>
+            <div class="feature-name-cards">
+              <div class="card-title">
+                <h3>Desktop and Mobile Version</h3>
+              </div>
+              <div class="card-desc">
+                <p>
+                  There are many variations of passages of Lorem Ipsum available,
+                  but the majority have suffered alteration in some form, by
+                  injected humour, or randomised words which don't look even.
+                </p>
+              </div>
+            </div>
+            <div class="feature-name-cards">
+              <div class="card-title">
+                <h3>Drag & Drop Builder</h3>
+              </div>
+              <div class="card-desc">
+                <p>
+                  There are many variations of passages of Lorem Ipsum available,
+                  but the majority have suffered alteration in some form, by
+                  injected humour, or randomised words which don't look even.
+                </p>
+              </div>
+            </div>
+            <div class="feature-name-cards">
+              <div class="card-title">
+                <h3>Awesome Modern Design</h3>
+              </div>
+              <div class="card-desc">
+                <p>
+                  There are many variations of passages of Lorem Ipsum available,
+                  but the majority have suffered alteration in some form, by
+                  injected humour, or randomised words which don't look even.
+                </p>
+              </div>
+            </div>
+            <div class="feature-name-cards">
+              <div class="card-title">
+                <h3>Super Easy to Edit</h3>
+              </div>
+              <div class="card-desc">
+                <p>
+                  There are many variations of passages of Lorem Ipsum available,
+                  but the majority have suffered alteration in some form, by
+                  injected humour, or randomised words which don't look even.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="feature-image">
+            <img src="./images/architect.png" alt="">
+          </div>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
